Implemented color mapping and palettes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 image = "0.24.7"
 lerp = "0.5.0"
+mut-binary-heap = "0.1.0"
 num = "0.4.1"
 num-complex = "0.4.4"
 num-traits = "0.2.17"
