Parallelized divergence calculation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,7 @@ lerp = "0.5.0"
 mut-binary-heap = "0.1.0"
 num = "0.4.1"
 num-complex = "0.4.4"
+num-rational = "0.4.1"
 num-traits = "0.2.17"
 ordered-float = "4.1.1"
+rayon = "1.8.0"
